# Magnetic-SLAM

./: README.md
arena/: CMakeLists.txt  package.xml
arena/code files/: backtosimple.py  csv_analysis.py  gpr_analysis.py  plot.py  stepwise.py  uniform_grid.py  updated_sgpr.py
arena/launch/: spawn_turtlebot.launch
arena/models/toroid/: model.config  model.sdf
arena/models/toroid/meshes/: toroid.stl
arena/worlds/: my_arena.world
